--- a/.github/actions/ssh-deploy/action.yml
+++ b/.github/actions/ssh-deploy/action.yml
@@ -35,13 +35,14 @@ runs:
         chmod 700 ~/.ssh
         # Support both raw OpenSSH key and base64-encoded key in secret
         KEY_RAW="${{ inputs.ssh_key }}"
-        if printf "%s" "$KEY_RAW" | grep -q "-----BEGIN"; then
+        # Detect plaintext OpenSSH key; use -- to prevent grep from treating dashes as options
+        if printf "%s" "$KEY_RAW" | grep -q -- "BEGIN OPENSSH PRIVATE KEY"; then
           # Looks like a PEM/OpenSSH key; normalize newlines
           printf "%s" "$KEY_RAW" | sed 's/\\n/\n/g' > ~/.ssh/id_ed25519
         else
           # Try base64 decode first; fallback to literal write if decode fails
           printf "%s" "$KEY_RAW" | tr -d '\r' | base64 -d > ~/.ssh/id_ed25519 2>/dev/null || true
-          if ! grep -q "BEGIN OPENSSH PRIVATE KEY" ~/.ssh/id_ed25519 2>/dev/null; then
+          if ! grep -q -- "BEGIN OPENSSH PRIVATE KEY" ~/.ssh/id_ed25519 2>/dev/null; then
             printf "%s" "$KEY_RAW" | sed 's/\\n/\n/g' > ~/.ssh/id_ed25519
           fi
         fi
@@ -49,6 +50,7 @@ runs:
         # Quick validation/warning if the key is passphrase-protected or invalid
         if ! ssh-keygen -y -f ~/.ssh/id_ed25519 >/dev/null 2>&1; then
           echo "WARNING: SSH key appears invalid or passphrase-protected. Ensure an unencrypted OpenSSH ed25519 private key is provided in secrets." >&2
+          echo "Key header (first line): $(head -n1 ~/.ssh/id_ed25519 2>/dev/null || echo 'N/A')" >&2
         fi
         # Best-effort host key prefetch; do not fail if host is unreachable
         ssh-keyscan -T 10 -p "${{ inputs.port }}" "${{ inputs.host }}" >> ~/.ssh/known_hosts 2>/dev/null || true
