ci(ssh-deploy): aggressively remove lingering portfolio-*-prod containers before compose up to resolve name conflicts

--- a/.github/actions/ssh-deploy/action.yml
+++ b/.github/actions/ssh-deploy/action.yml
@@ -148,8 +148,16 @@ runs:
         if command -v docker-compose >/dev/null 2>&1; then COMPOSE_CMD="docker-compose"; else COMPOSE_CMD="docker compose"; fi
         # Bring stack down with same overrides to prevent name conflicts and stale containers
         $COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml -f /tmp/compose.images.override.yml -f /tmp/compose.network.override.yml down --remove-orphans || true
-        # Extra safety: remove any lingering conflicting containers
+        # Extra safety: remove any lingering conflicting containers by explicit names
         docker rm -f portfolio-redis-prod portfolio-workfolio-prod portfolio-ai-backend-prod portfolio-arachne-prod >/dev/null 2>&1 || true
+        # And remove any container matching portfolio-*-prod just in case
+        CONFLICTING_CONTAINERS=$(docker ps -aq --filter name='^/portfolio-.*-prod$' || true)
+        if [ -n "$CONFLICTING_CONTAINERS" ]; then
+          echo "Removing lingering containers: $CONFLICTING_CONTAINERS"
+          docker rm -f $CONFLICTING_CONTAINERS >/dev/null 2>&1 || true
+        fi
+        # Small wait to ensure Docker releases names
+        sleep 2
         $COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml -f /tmp/compose.images.override.yml -f /tmp/compose.network.override.yml pull || true
         $COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml -f /tmp/compose.images.override.yml -f /tmp/compose.network.override.yml up -d --no-build --pull always
         $COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml -f /tmp/compose.images.override.yml -f /tmp/compose.network.override.yml ps
