--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -67,47 +67,4 @@ jobs:
           tags: ghcr.io/${{ github.repository }}/arachne:${{ github.sha }}
           labels: ${{ steps.meta.outputs.labels }}
 
-  deploy:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
-    needs: build-and-push
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: SSH Deploy (composite)
-        uses: ./.github/actions/ssh-deploy
-        with:
-          host: ${{ secrets.PROD_HOST }}
-          user: ${{ secrets.PROD_USER }}
-          port: ${{ secrets.PROD_PORT }}
-          ssh_key: ${{ secrets.PROD_SSH_KEY }}
-          ghcr_username: ${{ github.actor }}
-          ghcr_token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.repository }}
-          sha: ${{ github.sha }}
-
-  notify:
-    name: Notify Deployment Status
-    runs-on: ubuntu-latest
-    needs: deploy
-    if: always()
-
-    steps:
-      - name: Notify on success
-        if: needs.deploy.result == 'success'
-        run: |
-          echo "✅ Deployment to production completed successfully!"
-          echo "Commit: ${{ github.sha }}"
-          echo "Branch: ${{ github.ref_name }}"
-
-      - name: Notify on failure
-        if: needs.deploy.result == 'failure'
-        run: |
-          echo "❌ Deployment to production failed!"
-          echo "Commit: ${{ github.sha }}"
-          echo "Branch: ${{ github.ref_name }}"
-          exit 1
+  # Deployment is handled exclusively by .github/workflows/deploy.yml via workflow_run
