--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,8 +1,7 @@
-name: Continuous Deployment
+name: Image Publisher (Manual)
 
 on:
-  push:
-    branches: [main, master]
+  workflow_dispatch:
 
 permissions:
   contents: read
