--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -39,8 +39,9 @@ server {
     server_name kareemsasa.dev;
 
     # SSL Configuration
-    ssl_certificate /etc/letsencrypt/live/kareemsasa.dev/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/kareemsasa.dev/privkey.pem;
+    # Certs are stored under ./nginx/ssl on host and mounted to /etc/nginx/ssl in the container
+    ssl_certificate /etc/nginx/ssl/live/kareemsasa.dev/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/kareemsasa.dev/privkey.pem;
     
     # SSL Security Settings
     ssl_protocols TLSv1.2 TLSv1.3;
