--- a/infrastructure/prod/docker-compose.prod.yml
+++ b/infrastructure/prod/docker-compose.prod.yml
@@ -25,6 +25,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
+      - ./nginx/ssl:/etc/letsencrypt:ro
       - ./nginx/certbot/www:/var/www/certbot:ro
       - ./logs/nginx:/var/log/nginx
     depends_on:
