--- a/infrastructure/env.example
+++ b/infrastructure/env.example
@@ -30,6 +30,18 @@ AI_BACKEND_RATE_LIMIT_MAX_REQUESTS=100
 # Redis URL for quotas (optional in dev; required for per-IP daily limits)
 AI_BACKEND_REDIS_URL=redis://redis:6379/0
 
+# Per-IP daily request limit for AI chat (enforced by the backend)
+# Default is 50 if unset
+AI_DAILY_LIMIT=50
+
+# CORS configuration for AI Backend (production recommended)
+# Comma-separated list of allowed origins (e.g., https://your-domain.com,https://www.your-domain.com)
+CORS_ALLOW_ORIGIN=https://your-domain.com
+# Allowed HTTP methods for CORS preflight and requests
+CORS_ALLOW_METHODS=GET, POST, OPTIONS
+# Allowed headers the client may send
+CORS_ALLOW_HEADERS=DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization
+
 # =============================================================================
 # ARACHNE SCRAPER CONFIGURATION
 # =============================================================================
@@ -45,9 +57,15 @@ ARACHNE_MAX_CONCURRENT=10
 ARACHNE_REQUEST_TIMEOUT=120s
 ARACHNE_TOTAL_TIMEOUT=180s
 ARACHNE_USE_HEADLESS=true
+# Headless browser security flags (defaults are secure)
+# Set to true only for testing scenarios
+ARACHNE_HEADLESS_IGNORE_CERT_ERRORS=false
+ARACHNE_HEADLESS_NO_SANDBOX=false
 ARACHNE_USER_AGENT=Mozilla/5.0 (compatible; PortfolioBot/1.0)
 ARACHNE_RATE_LIMIT=2
 ARACHNE_RATE_LIMIT_WINDOW=1s
+# Optional API token to protect /api/scrape endpoints (recommended in prod)
+ARACHNE_API_TOKEN=
 
 # Development scraper settings (overrides production values)
 ARACHNE_DEV_LOG_LEVEL=debug
