--- a/infrastructure/dev/docker-compose.dev.yml
+++ b/infrastructure/dev/docker-compose.dev.yml
@@ -34,7 +34,7 @@ services:
   arachne:
     build:
       context: ../services/arachne
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     environment:
       - SCRAPER_REDIS_ADDR=${ARACHNE_REDIS_ADDR:-redis:6379}
       - SCRAPER_REDIS_DB=${ARACHNE_REDIS_DB:-0}
@@ -52,6 +52,13 @@ services:
 
   # Nginx - Always running in development mode
   nginx:
+    image: nginx:alpine
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./nginx/conf.d/default.dev.conf:/etc/nginx/conf.d/default.conf:ro
+    ports:
+      - "${NGINX_HTTP_PORT:-80}:80"
+    depends_on:
+      - workfolio
+      - ai-backend
+      - arachne
