prod/nginx: override RO conf.d with writable volume; render from /tmp

--- a/infrastructure/prod/docker-compose.prod.yml
+++ b/infrastructure/prod/docker-compose.prod.yml
@@ -30,6 +30,7 @@ services:
       - ./nginx/certbot/www:/var/www/certbot:ro
       - ./logs/nginx:/var/log/nginx
       - ./nginx/conf.d/default.conf.template:/tmp/default.conf.template:ro
+      - /etc/nginx/conf.d
     depends_on:
       - workfolio
       - ai-backend
