--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -44,4 +44,6 @@ http {
 
     # Include server configurations
     include /etc/nginx/conf.d/*.conf;
+    # Also allow a rendered default.conf in /tmp for prod templating
+    include /tmp/default.conf;
 } 
