--- a/infrastructure/prod/docker-compose.prod.yml
+++ b/infrastructure/prod/docker-compose.prod.yml
@@ -30,7 +30,6 @@ services:
       - ./nginx/certbot/www:/var/www/certbot:ro
       - ./logs/nginx:/var/log/nginx
       - ./nginx/conf.d/default.conf.template:/tmp/default.conf.template:ro
-      - /etc/nginx/conf.d
     depends_on:
       - workfolio
       - ai-backend
@@ -45,7 +44,7 @@ services:
       retries: 3
       start_period: 40s
     command: >
-      /bin/sh -c "sed 's/__DOMAIN_NAME__/'\"$DOMAIN_NAME\"'/g' /tmp/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+      /bin/sh -c "sed 's/__DOMAIN_NAME__/'\"$DOMAIN_NAME\"'/g' /tmp/default.conf.template > /tmp/default.conf && nginx -g 'daemon off;'"
     deploy:
       resources:
         limits:
