--- a/infrastructure/nginx/conf.d/default.dev.conf
+++ b/infrastructure/nginx/conf.d/default.dev.conf
@@ -21,7 +21,10 @@ server {
 
     # Main portfolio (Workfolio)
     location / {
-        proxy_pass http://workfolio:80;
+        proxy_pass http://workfolio:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
