--- a/infrastructure/prod/docker-compose.cicd.yml
+++ b/infrastructure/prod/docker-compose.cicd.yml
@@ -18,15 +18,17 @@ services:
   nginx:
     image: nginx:alpine
     container_name: portfolio-nginx-prod
+    environment:
+      - DOMAIN_NAME=${DOMAIN_NAME}
     ports:
       - "${NGINX_HTTP_PORT:-80}:80"
       - "${NGINX_HTTPS_PORT:-443}:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro
       - ./nginx/ssl:/etc/letsencrypt:ro
       - ./nginx/certbot/www:/var/www/certbot:ro
       - ./logs/nginx:/var/log/nginx
+      - ./nginx/conf.d/default.conf.template:/tmp/default.conf.template:ro
     depends_on:
       workfolio:
         condition: service_healthy
@@ -35,6 +37,8 @@ services:
       arachne:
         condition: service_healthy
     restart: unless-stopped
+    command: >
+      /bin/sh -c "sed 's/__DOMAIN_NAME__/'\"$DOMAIN_NAME\"'/g' /tmp/default.conf.template > /tmp/default.conf && nginx -g 'daemon off;'"
     deploy:
       resources:
         limits:
