fix(prod): nginx was including the template as-is because the wildcard include picked up /tmp/default.conf.template, so __DOMAIN_NAME__ never got substituted and SSL failed.

--- a/infrastructure/dev/docker-compose.dev.yml
+++ b/infrastructure/dev/docker-compose.dev.yml
@@ -47,8 +47,8 @@ services:
       - SCRAPER_USE_HEADLESS=${ARACHNE_USE_HEADLESS:-true}
     volumes:
       - ../services/arachne:/app
-      - ../infrastructure/dev/arachne.air.toml:/app/.air.toml:ro
-    command: air
+      - ../infrastructure/dev/arachne.air.toml:/etc/air/air.toml:ro
+    command: air -c /etc/air/air.toml
     ports:
       - "${DEV_ARACHNE_PORT:-8080}:${DEV_ARACHNE_PORT:-8080}"
 
