--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -44,6 +44,6 @@ http {
 
     # Include server configurations
     include /etc/nginx/conf.d/*.conf;
-    # Also allow rendered config(s) in /tmp for prod templating (optional)
-    include /tmp/default.conf*;
+    # Include only the rendered config in /tmp for prod templating
+    include /tmp/default.conf;
 } 
