--- a/infrastructure/prod/docker-compose.prod.yml
+++ b/infrastructure/prod/docker-compose.prod.yml
@@ -102,9 +102,12 @@ services:
       - SESSION_TOKEN_SECRET=${SESSION_TOKEN_SECRET}
       - REDIS_URL=${AI_BACKEND_REDIS_URL:-redis://redis:6379/0}
       - TURNSTILE_SECRET=${TURNSTILE_SECRET}
+      - ARACHNE_URL=${ARACHNE_URL:-http://arachne:8080}
+      - ARACHNE_API_TOKEN=${ARACHNE_API_TOKEN}
       - CORS_ALLOW_ORIGIN=${CORS_ALLOW_ORIGIN:-https://${DOMAIN_NAME}}
       - CORS_ALLOW_METHODS=${CORS_ALLOW_METHODS:-GET, POST, OPTIONS}
       - CORS_ALLOW_HEADERS=${CORS_ALLOW_HEADERS:-DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization}
+      - PROFILE_CONTEXT_PATH=/app/profile/profile.md
     restart: unless-stopped
     networks:
       - portfolio-network-prod
@@ -153,6 +156,7 @@ services:
       - SCRAPER_USE_HEADLESS=${ARACHNE_USE_HEADLESS:-true}
       - SCRAPER_HEADLESS_IGNORE_CERT_ERRORS=${ARACHNE_HEADLESS_IGNORE_CERT_ERRORS:-false}
       - SCRAPER_HEADLESS_NO_SANDBOX=${ARACHNE_HEADLESS_NO_SANDBOX:-false}
+      - SCRAPER_MAX_CONTENT_BYTES=${ARACHNE_MAX_CONTENT_BYTES:-400000}
       - SCRAPER_USER_AGENT=${ARACHNE_USER_AGENT:-Mozilla/5.0 (compatible; PortfolioBot/1.0)}
       - SCRAPER_RATE_LIMIT=${ARACHNE_RATE_LIMIT:-2}
       - SCRAPER_RATE_LIMIT_WINDOW=${ARACHNE_RATE_LIMIT_WINDOW:-1s}
