--- a/infrastructure/dev/arachne.air.toml
+++ b/infrastructure/dev/arachne.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "tmp"
 [build]
 cmd = "go build -o ./tmp/arachne ./cmd/arachne/main.go"
 bin = "./tmp/arachne"
-full_bin = "${bin}"
+full_bin = "./tmp/arachne -api-port=8080"
 include_ext = ["go"]
 exclude_dir = ["vendor", "tmp", ".git"]
 delay = 100
