--- a/infrastructure/docker-compose.cicd.yml
+++ b/infrastructure/docker-compose.cicd.yml
@@ -47,6 +47,9 @@ services:
       - ENABLE_METRICS=${AI_BACKEND_ENABLE_METRICS:-true}
       - RATE_LIMIT_WINDOW_MS=${AI_BACKEND_RATE_LIMIT_WINDOW_MS:-900000}
       - RATE_LIMIT_MAX_REQUESTS=${AI_BACKEND_RATE_LIMIT_MAX_REQUESTS:-100}
+      - ARACHNE_URL=${ARACHNE_URL:-http://arachne:8080}
+      - ARACHNE_API_TOKEN=${ARACHNE_API_TOKEN:-}
+      - PROFILE_CONTEXT_PATH=/app/profile/profile.md
     restart: unless-stopped
     networks:
       - ${DOCKER_NETWORK_NAME:-portfolio-network}
