--- a/infrastructure/prod/docker-compose.cicd.yml
+++ b/infrastructure/prod/docker-compose.cicd.yml
@@ -83,6 +83,13 @@ services:
       - RATE_LIMIT_WINDOW_MS=${AI_BACKEND_RATE_LIMIT_WINDOW_MS:-900000}
       - RATE_LIMIT_MAX_REQUESTS=${AI_BACKEND_RATE_LIMIT_MAX_REQUESTS:-100}
     restart: unless-stopped
+    environment:
+      - ARACHNE_URL=${ARACHNE_URL:-http://arachne:8080}
+      - ARACHNE_API_TOKEN=${ARACHNE_API_TOKEN}
+      - PROFILE_CONTEXT_PATH=/app/profile/profile.md
+    environment:
+      - ARACHNE_URL=${ARACHNE_URL:-http://arachne:8080}
+      - ARACHNE_API_TOKEN=${ARACHNE_API_TOKEN}
     healthcheck:
       test:
         [
